deployment/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy-service
  labels:
    app: dummy
# spec:
#   ports:
#     - port: 80
#   type: NodePort
#   selector:
#     app: dummy
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      # protocol: TCP
      # name: http
  selector:
    app: dummy
