deployment/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1   
kind: Ingress   
metadata:   
  name: dummy-ingress  
  annotations:   
    nginx.ingress.kubernetes.io/rewrite-target: /$1   
spec:   
  rules:   
    - host: ingress.pengwin.local
      http:   
        paths:   
          - path: /
            pathType: Prefix   
            backend:   
              service:   
                name: dummy-service
                port:   
                  number: 80
